template and markup was added

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,6 +5,6 @@
 
 // Стили для файла с примером HTML-фрагмента
 @import './body.scss';
-@import './menu';
-@import './_theme-switcher';
-@import './toolbar';
+@import './menu.scss';
+@import './theme-switcher.scss';
+@import './toolbar.scss';
